# diabetes-predict-ml

./: LICENSE  README.md  app.py  diabetes.ipynb  diabetes_prediction_dataset_cleaned.csv  model_inference.ipynb  pyproject.toml
